--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1713,6 +1713,46 @@
 % The younger daughter also gave birth to a son, and she named him Ben-ammi. He is the father of the Ammonites of today.
 \N 小女儿也生下一个儿子，而她给他取名便亚米。他是今天亚扪人的父亲。
 
+% Genesis 20
+\section{第二十章}
+
+% Abraham, Sarah, and Abimelech
+\subsection*{亚伯拉罕、撒拉、和亚比米勒}
+
+% Now Abraham journeyed from there to the region of the Negev and settled between Kadesh and Shur. While he was staying in Gerar,
+\N 现在亚伯拉罕从那里旅行到尼革夫的区域并在加低斯和书珥之间安家。当他呆在基拉耳时，
+% Abraham said of his wife Sarah, “She is my sister.” So Abimelech king of Gerar had Sarah brought to him.
+\N 亚伯拉罕说他的妻子撒拉，“她是我的妹妹。”所以基拉耳王亚比米勒使撒拉被带给她。
+
+% One night, however, God came to Abimelech in a dream and told him, “You are as good as dead because of the woman you have taken, for she is a married woman.”
+\N 然而，一天晚上，上帝在一个梦中临到亚比米勒并告诉他，“因为你带来的这女人你死期已至，因为她是一个已婚妇女。”
+
+% Now Abimelech had not gone near her, so he replied, “Lord, would You destroy a nation even though it is innocent?
+\N 现在亚比米勒未曾亲近她，所以他回复，“主啊，祢会摧毁一族即使它是无辜的吗？
+% Didn’t Abraham tell me, ‘She is my sister’? And she herself said, ‘He is my brother.’ I have done this in the integrity of my heart and the innocence of my hands.”
+\N 难道不是亚伯拉罕告诉我，‘她是我的妹妹’？她自己也说，‘他是我的哥哥。’我以我内心的正直和我双手的无辜做的这事。”
+
+% Then God said to Abimelech in the dream, “Yes, I know that you did this with a clear conscience, and so I have kept you from sinning against Me. That is why I did not let you touch her.
+\N 然后上帝在梦中对亚比米勒说，“是的，我知道你以清洁的良心做的这，而所以我已使你避开对我犯罪。这是为何我不让你触碰她。
+% Now return the man’s wife, for he is a prophet; he will pray for you and you will live. But if you do not restore her, be aware that you will surely die—you and all who belong to you.”
+\N 现在将那人的妻子返还，因为他是一个先知；他会为你祷告而你就会存活。但如果你不归还她，要意识到你无疑会死---你和所有属于你的人。”
+
+% Early the next morning Abimelech got up and summoned all his servants; and when he described to them all that had happened, the men were terrified.
+\N 第二天清早，亚比米勒起身并召集他所有仆人；而当他像他们描述所有已发生的，众人惊恐。
+
+% Then Abimelech called Abraham and asked, “What have you done to us? How have I sinned against you, that you have brought such tremendous guilt upon me and my kingdom? You have done things to me that should not be done.”
+\N 然后亚比米勒召唤亚伯拉罕并问，“你对我们做了什么？我如何已对你犯罪，以致你将如此惊人的罪行带给我和我的国度？你已对我做了不该做的事情。”
+% Abimelech also asked Abraham, “What prompted you to do such a thing?”
+\N 亚比米勒还问亚伯拉罕，“什么促使你做这样的事？”
+
+% Abraham replied, “I thought to myself, ‘Surely there is no fear of God in this place. They will kill me on account of my wife.’ 
+\N 亚伯拉罕回复，“我自以为，‘在这地方无疑不敬畏上帝。他们会为了我的妻子而杀我。’
+% Besides, she really is my sister, the daughter of my father—though not the daughter of my mother—and she became my wife.
+\N 此外，她真的是我的妹妹，我父亲的女儿---但不是我母亲的女儿---而她成为了我的妻子。
+% So when God had me journey from my father’s house, I said to Sarah, ‘This is how you can show your loyalty to me: Wherever we go, say of me, “He is my brother.”’”
+\N 所以当上帝使我离开我父亲的住所旅行时，我对撒拉说，‘你能这样展示对我的忠诚：无论我们去哪里，说到我，“他是我的哥哥”’”
+
+
 \thispagestyle{empty}
 \newpage
 
