--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1752,6 +1752,18 @@
 % So when God had me journey from my father’s house, I said to Sarah, ‘This is how you can show your loyalty to me: Wherever we go, say of me, “He is my brother.”’”
 \N 所以当上帝使我离开我父亲的住所旅行时，我对撒拉说，‘你能这样展示对我的忠诚：无论我们去哪里，说到我，“他是我的哥哥”’”
 
+% So Abimelech brought sheep and cattle, menservants and maidservants, and he gave them to Abraham and restored his wife Sarah to him.
+\N 所以亚比米勒带了牛羊、男仆和女仆，而他将它们给了亚伯拉罕并将他的妻子撒拉归还给他。
+% And Abimelech said, “Look, my land is before you. Settle wherever you please.”
+\N 而亚比米勒说，“看，我的土地在你面前。在任何地方随心所欲安家。”
+% And he said to Sarah, “See, I am giving your brother a thousand pieces of silver. It is your vindication before all who are with you; you are completely cleared.”
+\N 而他对撒拉说。“看看，我正将一千块银子给你的哥哥。这是你在所有与你一起的人面前的昭雪；你被完全洗清。”
+
+% Then Abraham prayed to God, and God healed Abimelech and his wife and his maidservants, so that they could again bear children—
+\N 然后亚伯拉罕向上帝祷告，而上帝治愈了亚比米勒和他的妻子以及他的女仆们，以使她们能再次生儿女---
+% for on account of Abraham’s wife Sarah, the LORD had completely closed all the wombs in Abimelech’s household.
+\N 因为为了亚伯拉罕的妻子撒拉，耶和华已完全将在亚比米勒家室中的所有子宫关闭。
+
 
 \thispagestyle{empty}
 \newpage
