--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -423,7 +423,7 @@
 \N 而该隐和他的妻子同房，她就受孕而生下以诺。然后该隐建造了一座城市并以他儿子以诺为它取名。
 
 % Now to Enoch was born Irad, and Irad was the father of Mehujael, and Mehujael was the father of Methusael, and Methusael was the father of Lamech.
-\N 现在从以诺出生了以拿，而以拿是米户雅利的父亲，而米户雅利是玛土撒利的父亲，而玛土撒利是拉麦的父亲。
+\N 现在为以诺出生了以拿，而以拿是米户雅利的父亲，而米户雅利是玛土撒利的父亲，而玛土撒利是拉麦的父亲。
 % And Lamech married two women, one named Adah and the other Zillah.
 \N 而拉麦娶了两个女人，一个名叫亚大而另一个叫洗拉。
 
@@ -450,7 +450,7 @@
 \N 而亚当再次与他的妻子同房，她就生下一个儿子并给他取名塞特，说，“上帝已准予我另一个苗裔代替亚伯，因为该隐杀了他。”
 
 % And to Seth also a son was born, and he called him Enosh. At that time men began to call upon the name of the LORD.
-\N 而从塞特也出生了一个儿子，而他称他以挪士。
+\N 而为塞特也出生了一个儿子，而他称他以挪士。
 
 在那时人们开始求靠耶和华的名。
 
@@ -549,7 +549,7 @@
 \subsection*{地上的败坏}
 
 % Now when men began to multiply on the face of the earth and daughters were born to them,
-\N 现在当人类开始在地表倍增，而女儿们从他们出生时，
+\N 现在当人类开始在地表倍增，而女儿们为他们出生时，
 % the sons of God saw that the daughters of men were beautiful, and they took as wives whomever they chose.
 \N 上帝的儿子们看见人类的女儿漂亮，他们就娶任何他们选取的为妻子。
 
@@ -907,7 +907,7 @@
 \subsubsection*{闪族}
 
 % And sons were also born to Shem, the older brother of Japheth; Shem was the forefather of all the sons of Eber.
-\N 而也有儿子从闪，雅弗的兄长出生；闪是希伯所有子嗣的先祖。
+\N 而也有儿子为闪，雅弗的兄长出生；闪是希伯所有子嗣的先祖。
 
 % The sons of Shem: Elam, Asshur, Arphaxad, Lud, and Aram.
 \N 闪的子嗣：以拦、亚述、亚法撒、路德和亚兰。
@@ -919,7 +919,7 @@
 \N 亚法撒是沙拉的父亲，而沙拉是希伯的父亲。
 
 % Two sons were born to Eber: One was named Peleg, because in his days the earth was divided, and his brother was named Joktan.
-\N 两个儿子从希伯出生：一个名叫法勒，因为在他的日子大地被分割，而他的兄弟名叫约坍。
+\N 两个儿子为希伯出生：一个名叫法勒，因为在他的日子大地被分割，而他的兄弟名叫约坍。
 
 % And Joktan was the father of Almodad, Sheleph, Hazarmaveth, Jerah,
 \N 而约坍是亚摩答、沙列、哈萨玛非、耶拉、
@@ -1442,7 +1442,7 @@
 \N 而我会祝福她并无疑会由她赐给你一个儿子。我会祝福她，而她会成为众邦之母；万族的众王会从她衍生。”
 
 % Abraham fell facedown. Then he laughed and said to himself, “Can a child be born to a man who is a hundred years old? Can Sarah give birth at the age of ninety?”
-\N 亚伯拉罕俯伏在地。然后他笑了并对他自己说，“能从一个一百岁的人生出一个孩子？撒拉能在九十的年纪生子？”
+\N 亚伯拉罕俯伏在地。然后他笑了并对他自己说，“能为一个一百岁的人生出一个孩子？撒拉能在九十的年纪生子？”
 % And Abraham said to God, “O that Ishmael might live under Your blessing!”
 \N 而亚伯拉罕对上帝说，“但愿以实玛利活在祢的祝福下！”
 
@@ -1764,6 +1764,42 @@
 % for on account of Abraham’s wife Sarah, the LORD had completely closed all the wombs in Abimelech’s household.
 \N 因为为了亚伯拉罕的妻子撒拉，耶和华已完全将在亚比米勒家室中的所有子宫关闭。
 
+% Genesis 21
+\section{第二十一章}
+
+% The Birth of Isaac
+\subsection*{以撒诞生}
+
+% Now the LORD attended to Sarah as He had said, and the LORD did for Sarah what He had promised.
+\N 现在耶和华眷顾撒拉如祂已说的，而耶和华为撒拉做了祂已应许的。
+% So Sarah conceived and bore a son to Abraham in his old age, at the very time God had promised.
+\N 所以撒拉受孕并为亚伯拉罕在他老龄时生了一个儿子，正是在上帝已应许的时间。
+
+% And Abraham gave the name Isaac to the son Sarah bore to him.
+\N 而亚伯拉罕将名字以撒给了撒拉为他生的这个儿子。
+% When his son Isaac was eight days old, Abraham circumcised him, as God had commanded him.
+\N 当他的儿子以撒八天大时，亚伯拉罕为他施割礼，如上帝已命令他的。
+% Abraham was a hundred years old when his son Isaac was born to him.
+\N 亚伯拉罕一百岁当他的儿子以撒为他出生时。
+
+% Then Sarah said, “God has made me laugh, and everyone who hears of this will laugh with me.”
+\N 然后撒拉说，“上帝已使我欢笑，而每个听说这的人都会与我同笑。”
+% She added, “Who would have told Abraham that Sarah would nurse children? Yet I have borne him a son in his old age.”
+\N 她补充说，“谁曾会告诉亚伯拉罕：撒拉会抚育儿女？我却已为他在他老龄时生了一个儿子。”
+
+% So the child grew and was weaned, and Abraham held a great feast on the day Isaac was weaned.
+\N 所以那孩子成长并断了奶，而亚伯拉罕在以撒断奶的那日举办了一场盛大的筵席。
+
+% Sarah Turns against Hagar
+\subsection*{撒拉对夏甲反目}
+
+% But Sarah saw that the son whom Hagar the Egyptian had borne to Abraham was mocking her son,
+\N 但撒拉看见埃及人夏甲为亚伯拉罕已生的儿子在嘲笑她的儿子，
+% and she said to Abraham, “Expel the slave woman and her son, for the slave woman’s son will never share in the inheritance with my son Isaac!”
+\N 而她对亚伯拉罕说，“驱逐那仆女和她的儿子，因为那仆女的儿子绝不会与我的儿子以撒一同有份于这遗产。”
+
+% Now this matter distressed Abraham greatly because it concerned his son Ishmael.
+\N 现在这问题使亚伯拉罕忧痛极大因为这关涉他的儿子以实玛利。
 
 \thispagestyle{empty}
 \newpage
