--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1800,6 +1800,29 @@
 
 % Now this matter distressed Abraham greatly because it concerned his son Ishmael.
 \N 现在这问题使亚伯拉罕忧痛极大因为这关涉他的儿子以实玛利。
+% But God said to Abraham, “Do not be distressed about the boy and your maidservant. Listen to everything that Sarah tells you, for through Isaac your offspring will be reckoned.
+\N 但上帝对亚伯拉罕说，“不要忧痛于这男孩和你的女仆。听从撒拉告诉你的一切，因为是藉着以撒你的后嗣才会被计数。
+% But I will also make a nation of the slave woman’s son, because he is your offspring.”
+\N 但我也会使这仆女的儿子成为一邦，因为他是你的后嗣。”
+
+% Early in the morning, Abraham got up, took bread and a skin of water, put them on Hagar’s shoulders, and sent her away with the boy. She left and wandered in the Wilderness of Beersheba.
+\N 在清早，亚伯拉罕起身，带了饼和一皮袋水，将它们放在夏甲的肩膀上，并将她与那男孩一起送走。她离开而在别是巴的旷野徘徊。
+% When the water in the skin was gone, she left the boy under one of the bushes.
+\N 当皮袋中的水喝光时，她将男孩留在一株灌木下。
+% Then she went off and sat down nearby, about a bowshot away, for she said, “I cannot bear to watch the boy die!” And as she sat nearby, she lifted up her voice and wept.
+\N 然后她离去并在附近坐下，大约一箭之遥，因为她说，“我无法承受看见那男孩死去！”而她坐在附近时，她放声而泣。
+
+% Then God heard the voice of the boy, and the angel of God called to Hagar from heaven, “What is wrong, Hagar? Do not be afraid, for God has heard the voice of the boy where he lies.
+\N 然后上帝听见那男孩的声音，而上帝的使者从天国向夏甲呼唤，“怎么啦，夏甲？不要害怕，因为上帝已在他所躺之处听见男孩的声音。
+% Get up, lift up the boy, and take him by the hand, for I will make him into a great nation.”
+\N 起身，抱起那男孩，并用手牵着他，因为我会使他成为一个伟大的邦国。”
+% Then God opened her eyes, and she saw a well of water. So she went and filled the skin with water and gave the boy a drink.
+\N 然后上帝打开了她的眼睛，而她看见一口水井。所以她走去将皮带装满水并给那男孩喝。
+
+% And God was with the boy, and he grew up and settled in the wilderness and became a great archer.
+\N 而上帝与那男孩同在，而他长大并在旷野中安家而成为一个伟大的射手。
+% And while he was dwelling in the Wilderness of Paran, his mother got a wife for him from the land of Egypt.
+\N 而当他在巴兰的旷野中栖居时，他的母亲从埃及的土地上为他得了一个妻子。
 
 \thispagestyle{empty}
 \newpage
