--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1799,7 +1799,7 @@
 \N 而她对亚伯拉罕说，“驱逐那仆女和她的儿子，因为那仆女的儿子绝不会与我的儿子以撒一同有份于这遗产。”
 
 % Now this matter distressed Abraham greatly because it concerned his son Ishmael.
-\N 现在这问题使亚伯拉罕忧痛极大因为这关涉他的儿子以实玛利。
+\N 现在这问题使亚伯拉罕忧痛极大，因为这关涉他的儿子以实玛利。
 % But God said to Abraham, “Do not be distressed about the boy and your maidservant. Listen to everything that Sarah tells you, for through Isaac your offspring will be reckoned.
 \N 但上帝对亚伯拉罕说，“不要忧痛于这男孩和你的女仆。听从撒拉告诉你的一切，因为是藉着以撒你的后嗣才会被计数。
 % But I will also make a nation of the slave woman’s son, because he is your offspring.”
@@ -1823,6 +1823,42 @@
 \N 而上帝与那男孩同在，而他长大并在旷野中安家而成为一个伟大的射手。
 % And while he was dwelling in the Wilderness of Paran, his mother got a wife for him from the land of Egypt.
 \N 而当他在巴兰的旷野中栖居时，他的母亲从埃及的土地上为他得了一个妻子。
+
+% The Covenant at Beersheba
+\subsection*{别是巴协定}
+
+% At that time Abimelech and Phicol the commander of his army said to Abraham, “God is with you in all that you do.
+\N 在那时亚比米勒和他军队的指挥官非各对亚伯拉罕说，“上帝在你做的所有中都与你同在。
+% Now, therefore, swear to me here before God that you will not deal falsely with me or my children or descendants. Show to me and to the country in which you reside the same kindness that I have shown to you.”
+\N 现在，因此，在这里在上帝面前对我发誓你不会虚假地对付我或我的儿女或后代。向我并向你定居的国家展示我已展示给你的相同的良善。”
+
+% And Abraham replied, “I swear it.”
+\N 而亚伯拉罕回复，“我对此发誓。”
+
+% But when Abraham complained to Abimelech about a well that Abimelech’s servants had seized,
+\N 但当亚伯拉罕向亚比米勒抱怨亚比米勒的仆人们已霸占一口井时，
+% Abimelech replied, “I do not know who has done this. You did not tell me, so I have not heard about it until today.”
+\N 亚比米勒回复，“我不知道谁做的这事。你不告诉我，所以我未曾听说这事直到今天。”
+
+% So Abraham brought sheep and cattle and gave them to Abimelech, and the two men made a covenant.
+\N 所以亚伯拉罕带了牛羊并将它们给了亚比米勒，而两人立了一个协定。
+% Abraham separated seven ewe lambs from the flock,
+\N 亚伯拉罕将七只母羊羔从羊群分开，
+% and Abimelech asked him, “Why have you set apart these seven ewe lambs?”
+\N 而亚比米勒问他，“你为何分别这七只母羊羔？”
+
+% He replied, “You are to accept the seven ewe lambs from my hand as my witness that I dug this well.”
+\N 他回复，“你要从我手中接受这七只母羊羔，作为我挖这井的一个见证。”
+% So that place was called Beersheba, because it was there that the two of them swore an oath.
+\N 所以那地方被称为别是巴，因为他们两人在那里发了一个誓言。
+% After they had made the covenant at Beersheba, Abimelech and Phicol the commander of his army got up and returned to the land of the Philistines.
+\N 在他们在别是巴立下协定后，亚比米勒和他军队的指挥官非各起身并返回非利士人的土地。
+
+% And Abraham planted a tamarisk tree in Beersheba, and there he called upon the name of the LORD, the Eternal God.
+\N 而亚伯拉罕在别是巴栽了一棵怪柳树，而他在那里求靠耶和华、永恒上帝的名。
+% And Abraham resided in the land of the Philistines for a long time.
+\N 而亚伯拉罕在非利士人的土地上定居了很长时间。
+
 
 \thispagestyle{empty}
 \newpage
