--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1859,6 +1859,62 @@
 % And Abraham resided in the land of the Philistines for a long time.
 \N 而亚伯拉罕在非利士人的土地上定居了很长时间。
 
+% Genesis 22
+\section{第二十二章}
+
+% The Offering of Isaac
+\subsection*{献以撒}
+
+% Some time later God tested Abraham and said to him, “Abraham!”
+\N 一段时间后上帝试验亚伯拉罕并对他说，“亚伯拉罕！”
+
+% “Here I am,” he answered.
+“我在这里，”他回答。
+
+% “Take your son,” God said, “your only son Isaac, whom you love, and go to the land of Moriah. Offer him there as a burnt offering on one of the mountains, which I will show you.”
+\N “带着你的儿子，”上帝说，“你惟一的儿子以撒，你所爱的，并去到摩利亚之地。到那里，在一座我会展示给你的山上，将他作为燔祭奉上。”
+
+% So Abraham got up early the next morning, saddled his donkey, and took along two of his servants and his son Isaac. He split the wood for a burnt offering and set out for the place God had designated.
+\N 所以亚伯拉罕第二天清早动身，给他的驴装上鞍，并带了他两个仆人和他的儿子以撒一道。他为燔祭劈了柴就动身到上帝已指示的地方。
+
+% On the third day Abraham looked up and saw the place in the distance.
+\N 在第三天，亚伯拉罕仰望并看见了远处那个地方。
+% “Stay here with the donkey,” Abraham told his servants. “The boy and I will go over there to worship, and then we will return to you.”
+\N “与驴呆在一起，”亚伯拉罕告诉他的仆人们。“我和这男孩会去到那里敬拜，而然后我们会返回到你们这。”
+
+% Abraham took the wood for the burnt offering and placed it on his son Isaac. He himself carried the fire and the sacrificial knife, and the two of them walked on together.
+\N 亚伯拉罕带了燔祭的柴并将其放置在他的儿子以撒身上。他自己携带了火和献祭的刀，而他们俩一起前行。
+
+% Then Isaac said to his father Abraham, “My father!”
+\N 然后以撒对他父亲亚伯拉罕说，“我的父亲！”
+
+% “Here I am, my son,” he replied.
+“我在这里，我的儿子，”他回复。
+
+% “The fire and the wood are here,” said Isaac, “but where is the lamb for the burnt offering?”
+“火和柴在这，”以撒说，“可燔祭的羔羊在哪呢？”
+
+% Abraham answered, “God Himself will provide the lamb for the burnt offering, my son.” And the two walked on together.
+\N 亚伯拉罕回答，“我的儿子，上帝会亲自为燔祭提供羔羊。”然后两人一起前行。
+
+% When they arrived at the place God had designated, Abraham built the altar there and arranged the wood. He bound his son Isaac and placed him on the altar, atop the wood.
+\N 当他们抵达上帝已指示的地方时，亚伯拉罕在那里建造了祭坛并摆好了柴。他绑住他的儿子以撒并将他放置在祭坛上，柴的上方。
+% Then Abraham reached out his hand and took the knife to slaughter his son.
+\N 然后亚伯拉罕伸出他的手并拿刀要宰杀他的儿子。
+
+% The LORD Provides the Sacrifice
+\subsection*{耶和华提供献祭}
+
+% Just then the angel of the LORD called out to him from heaven, “Abraham, Abraham!”
+\N 就在那时耶和华的使者从天国对他高呼，“亚伯拉罕，亚伯拉罕！”
+
+% “Here I am,” he replied.
+“我在这里，”他回复。
+
+% “Do not lay a hand on the boy or do anything to him,” said the angel, “for now I know that you fear God, since you have not withheld your only son from me.”
+\N “不要对那男孩下手或对他做任何事，”使者说，“因为现在我知道你敬畏上帝，因为你未曾对我扣留你惟一的儿子。”
+
+
 
 \thispagestyle{empty}
 \newpage
