--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -124,7 +124,7 @@
 \N 并让它们在天空的穹苍中充当光体，以照耀在大地之上。”而它就如此。
 
 % God made two great lights: the greater light to rule the day and the lesser light to rule the night. And He made the stars as well.
-\N 上帝制造了两个巨大的光体：较大的光体统管白昼而较小的光体统管黑夜。而祂夜制造了星辰。
+\N 上帝制造了两个巨大的光体：较大的光体统管白昼而较小的光体统管黑夜。而祂也制造了星辰。
 
 % God set these lights in the expanse of the sky to shine upon the earth,
 \N 上帝将这些光体设置在天空的穹苍中，照耀在大地之上，
@@ -1064,7 +1064,7 @@
 \N 但撒莱不育；她没有子女。
 
 % And Terah took his son Abram, his grandson Lot son of Haran, and his daughter-in-law Sarai the wife of Abram, and they set out from Ur of the Chaldeans for the land of Canaan. But when they arrived in Haran, they settled there.
-\N 而他拉带了他儿子亚伯兰、他的孙子、哈兰的儿子罗得，和他的儿媳、亚伯兰的妻子撒莱，而他们从迦勒底的吾珥动身到迦南之地。但当他们抵达哈兰，他们在那里安家。
+\N 而他拉带了他儿子亚伯兰、他的孙子、哈兰的儿子罗得，和他的儿媳、亚伯兰的妻子撒莱，而他们从迦勒底的吾珥出发到迦南之地。但当他们抵达哈兰，他们在那里安家。
 % Terah lived 205 years, and he died in Haran.
 \N 他拉活了205年，而他死在了哈兰。
 
@@ -1090,7 +1090,7 @@
 % So Abram departed, as the LORD had directed him, and Lot went with him. Abram was seventy-five years old when he left Haran.
 \N 所以亚伯兰离去，如耶和华已指引他的，而罗得跟他一起去。亚伯兰75岁当他离开哈兰时。
 % And Abram took his wife Sarai, his nephew Lot, and all the possessions and people they had acquired in Haran, and set out for the land of Canaan.
-\N 而亚伯兰带了他的妻子撒莱，他的外甥罗得，和他们在哈兰已获取的所有财产和人员，就动身到迦南之地。
+\N 而亚伯兰带了他的妻子撒莱，他的外甥罗得，和他们在哈兰已获取的所有财产和人员，就出发到迦南之地。
 
 % When they came to the land of Canaan,
 当他们来到迦南之地时，
@@ -1169,7 +1169,7 @@
 % And Lot looked out and saw that the whole plain of the Jordan, all the way to Zoar, was well watered like the garden of the LORD, like the land of Egypt. (This was before the LORD destroyed Sodom and Gomorrah.)
 \N 而罗得观望并看见约旦的整个平原，一直到琐珥，都被浇灌得像耶和华的园子，像埃及的土地。（这是在耶和华摧毁索多玛和蛾摩拉之前。）
 % So Lot chose the whole plain of the Jordan for himself and set out toward the east. And Abram and Lot parted company.
-\N 所以罗得为他自己选择了约旦的整个平原并向东动身。亚伯兰和罗得就分道扬镳了。
+\N 所以罗得为他自己选择了约旦的整个平原并向东出发。亚伯兰和罗得就分道扬镳了。
 
 % Abram lived in the land of Canaan, but Lot settled in the cities of the plain and pitched his tent toward Sodom.
 \N 亚伯兰生活在迦南之地，罗得却安家在平原的城市中并向着索多玛搭起他的帐篷。
@@ -1234,7 +1234,7 @@
 % Then an escapee came and reported this to Abram the Hebrew. Now Abram was living near the Oaks of Mamre the Amorite, a brother of Eshcol and Aner, all of whom were bound by treaty to Abram.
 \N 那时一个逃脱者来到并将这报告给希伯来人亚伯兰。现在亚伯兰正在亚摩利人幔利的橡树附近生活，幔利是以实各和亚乃的弟兄，他们都与亚伯兰有条约约束。
 % And when Abram heard that his relative had been captured, he mobilized the 318 trained men born in his household, and they set out in pursuit as far as Dan.
-\N 而当亚伯兰听到他的亲戚已被俘获，他动员了318名在他家室出生受训的人，而他们动身追捕远至但。
+\N 而当亚伯兰听到他的亲戚已被俘获，他动员了318名在他家室出生受训的人，而他们出发追捕远至但。
 
 % During the night, Abram divided his forces and routed Chedorlaomer’s army, pursuing them as far as Hobah, north of Damascus.
 \N 在夜间，亚伯兰将他的兵力分队并击溃了基大老玛的军队，追捕他们远至大马色北边的何巴。
@@ -1291,7 +1291,7 @@
 % Then the word of the LORD came to Abram, saying, “This one will not be your heir, but one who comes from your own body will be your heir.”
 \N 于是耶和华的言临到亚伯兰，说，“这一个不是你的继承人，而来自你自身身体的一个会是你的继承人。”
 % And the LORD took him outside and said, “Now look to the heavens and count the stars, if you are able.” Then He told him, “So shall your offspring be.”
-\N 而耶和华带他到外面并说，“现在看向诸天，如果你有能力，就数算众星。”然后祂告诉他，“你的后嗣也必如此。”
+\N 而耶和华带他到外面并说，“现在看向诸天，如果你有能力，就数算星辰。”然后祂告诉他，“你的后嗣也必如此。”
 
 % Abram believed the LORD, and it was credited to him as righteousness.
 \N 亚伯兰相信耶和华，而这作为义被归功于他。
@@ -1349,7 +1349,7 @@
 % And Abram listened to the voice of Sarai.
 而亚伯兰听从了撒莱的话。
 % So after he had lived in Canaan for ten years, his wife Sarai took her Egyptian maidservant Hagar and gave her to Abram to be his wife.
-\N 所以在他已在迦南生活十年之后，他的妻子撒莱带了她的埃及女仆夏甲并将她给了亚伯兰作他的妾。
+\N 所以在他已在迦南生活十年之后，他的妻子撒莱带了她的埃及女仆夏甲并将她给了亚伯兰作他的妻子。
 % And he slept with Hagar, and she conceived. But when Hagar realized that she was pregnant, she began to despise her mistress.
 \N 而他与夏甲同寝，她就受孕了。但当夏甲意识到她怀孕时，她开始鄙视她的女主。
 
@@ -1875,7 +1875,7 @@
 \N “带着你的儿子，”上帝说，“你惟一的儿子以撒，你所爱的，并去到摩利亚之地。到那里，在一座我会展示给你的山上，将他作为燔祭奉上。”
 
 % So Abraham got up early the next morning, saddled his donkey, and took along two of his servants and his son Isaac. He split the wood for a burnt offering and set out for the place God had designated.
-\N 所以亚伯拉罕第二天清早动身，给他的驴装上鞍，并带了他两个仆人和他的儿子以撒一道。他为燔祭劈了柴就动身到上帝已指示的地方。
+\N 所以亚伯拉罕第二天清早出发，给他的驴装上鞍，并带了他两个仆人和他的儿子以撒一道。他为燔祭劈了柴就出发到上帝已指示的地方。
 
 % On the third day Abraham looked up and saw the place in the distance.
 \N 在第三天，亚伯拉罕仰望并看见了远处那个地方。
@@ -1913,6 +1913,38 @@
 
 % “Do not lay a hand on the boy or do anything to him,” said the angel, “for now I know that you fear God, since you have not withheld your only son from me.”
 \N “不要对那男孩下手或对他做任何事，”使者说，“因为现在我知道你敬畏上帝，因为你未曾对我扣留你惟一的儿子。”
+
+% Then Abraham looked up and saw behind him a ram in a thicket, caught by its horns. So he went and took the ram and offered it as a burnt offering in place of his son.
+\N 然后亚伯拉罕仰望并看见在他身后有一只公绵羊被它的角卡在树丛中。所以他走去取了那公绵羊，并将它代替他的儿子作为燔祭奉上。
+% And Abraham called that place The LORD Will Provide. So to this day it is said, “On the mountain of the LORD it will be provided.”
+\N 而亚伯拉罕称那地方“耶和华会提供”。所以到今日都有人说，“在耶和华的山上会被提供。”
+
+% And the angel of the LORD called to Abraham from heaven a second time,
+\N 而耶和华的使者从天国向亚伯拉罕第二次呼唤，
+% saying, “By Myself I have sworn, declares the LORD, that because you have done this and have not withheld your only son,
+\N 说，“我已向我自己发誓，耶和华宣告，因为你已完成这而未曾扣留你惟一的儿子，
+% I will surely bless you, and I will multiply your descendants like the stars in the sky and the sand on the seashore. Your descendants will possess the gates of their enemies.
+\N 我无疑会祝福你，而我会倍增你的后代，像天空中星辰和海滩上的沙一样。你的后代会占有他们众敌的城门。
+% And through your offspring all nations of the earth will be blessed, because you have obeyed My voice.”
+\N 而藉着你的后嗣，地上万民都会蒙福，因为你已顺服我的话。”
+
+% Abraham went back to his servants, and they got up and set out together for Beersheba. And Abraham settled in Beersheba.
+\N 亚伯拉罕走回到他仆人们那里，而他们起身并一起向别是巴出发。亚伯拉罕就安家在别是巴。
+
+% The Sons of Nahor
+\subsection*{拿鹤的儿子们}
+
+% Some time later, Abraham was told, “Milcah has also borne sons to your brother Nahor: 
+\N 一段时间后，亚伯拉罕被告知，“密迦已为你的兄弟拿鹤生了几个儿子：
+% Uz the firstborn, his brother Buz, Kemuel (the father of Aram),
+\N 长子乌斯，他的弟弟布斯、基母利（亚兰的父亲）、
+% Chesed, Hazo, Pildash, Jidlaph, and Bethuel.”
+\N 并基薛、哈琐、必达、益拉、和彼土利。”
+
+% And Bethuel became the father of Rebekah. Milcah bore these eight sons to Abraham’s brother Nahor.
+\N 而彼土利成为利百加的父亲。
+% Moreover, Nahor’s concubine, whose name was Reumah, bore Tebah, Gaham, Tahash, and Maacah.
+\N 此外，拿鹤的妾，她的名字是流玛，生了提八、迦含、他辖和玛迦。
 
 
 
