--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1239,7 +1239,7 @@
 % During the night, Abram divided his forces and routed Chedorlaomer’s army, pursuing them as far as Hobah, north of Damascus.
 \N 在夜间，亚伯兰将他的兵力分队并击溃了基大老玛的军队，追捕他们远至大马色北边的何巴。
 % He retrieved all the goods, as well as his relative Lot and his possessions, together with the women and the rest of the people.
-\N 他寻回了所有物品，还有他的亲戚罗得和他的财产，连同女人和剩余的民众。
+\N 他寻回了所有物品，还有他的亲戚罗得和他的财产，连同女人和剩余的族民。
 
 % Melchizedek Blesses Abram
 \subsection*{麦基洗德祝福亚伯兰}
@@ -1262,7 +1262,7 @@
 于是亚伯兰将一切的什一给了麦基洗德。
 
 % The king of Sodom said to Abram, “Give me the people, but take the goods for yourself.”
-\N 索多玛王对亚伯兰说，“将民众给我，而物品你自己拿去。”
+\N 索多玛王对亚伯兰说，“将族民给我，而物品你自己拿去。”
 
 % But Abram replied to the king of Sodom, “I have raised my hand to the LORD God Most High, Creator of heaven and earth,
 \N 但亚伯兰回复索多玛王，“我已向耶和华至高者、天和地的造物主举手，
@@ -1636,7 +1636,7 @@
 % Then the two men said to Lot, “Do you have anyone else here—a son-in-law, your sons or daughters, or anyone else in the city who belongs to you? Get them out of here,
 \N 然后那俩人对罗得说，“你在这有任何其他人---女婿、你的儿子或女儿，或在这城里任何其他属于你的人吗？要将他们带离这里，
 % because we are about to destroy this place. For the outcry to the LORD against its people is so great that He has sent us to destroy it.”
-\N 因为我们将要摧毁这地方。因为到耶和华那的对它民众的怒怨是如此巨大以致祂已差派我们来摧毁它。”
+\N 因为我们将要摧毁这地方。因为到耶和华那的对它族民的怒怨是如此巨大以致祂已差派我们来摧毁它。”
 
 % So Lot went out and spoke to the sons-in-law who were pledged in marriage to his daughters. “Get up,” he said. “Get out of this place, for the LORD is about to destroy the city!” But his sons-in-law thought he was joking.
 \N 所以罗得出去并讲给许诺与他的女儿们结婚的女婿们。“起身，”他说。“离开这个地方，因为耶和华将要摧毁这城市！”但他的女婿们以为他在开玩笑。
@@ -1946,7 +1946,43 @@
 % Moreover, Nahor’s concubine, whose name was Reumah, bore Tebah, Gaham, Tahash, and Maacah.
 \N 此外，拿鹤的妾，她的名字是流玛，生了提八、迦含、他辖和玛迦。
 
+% Genesis 23
+\section{第二十三章}
 
+% The Death and Burial of Sarah
+\subsection*{撒拉的死与埋葬}
+
+% Now Sarah lived to be 127 years old.
+\N 现在撒拉活到了127岁。
+% She died in Kiriath-arba (that is, Hebron) in the land of Canaan, and Abraham went out to mourn and to weep for her.
+\N 她死在迦南之地的基列亚巴（那就是希伯仑），而亚伯拉罕出去为她哀悼并哭泣。
+
+% Then Abraham got up from beside his dead wife and said to the Hittites,
+\N 然后亚伯拉罕从他亡妻身旁起身并对赫人说，
+% “I am a foreigner and an outsider among you. Give me a burial site among you so that I can bury my dead.”
+\N “我在你们中间是一个异邦人和一个外人。请在你们中间给我一个埋葬的地点以使我能埋葬我的死人。”
+
+% The Hittites replied to Abraham,
+\N 赫人回复亚伯拉罕，
+% “Listen to us, sir. You are God’s chosen one among us. Bury your dead in the finest of our tombs. None of us will withhold his tomb for burying your dead.”
+\N “阁下，请听我们说。你是上帝在我们中间拣选的一位。将你的死人埋葬在我们最好的坟墓中。我们无人会对埋葬你的死人而不给他的坟墓。”
+
+% Then Abraham rose and bowed down before the people of the land, the Hittites.
+\N 然后亚伯拉罕起来并在这土地的族民、赫人面前下拜。
+% “If you are willing for me to bury my dead,” he said to them, “listen to me, and approach Ephron son of Zohar on my behalf
+\N “如果你们有意让我埋葬我的死人，”他对他们说，“听我说，并代我与琐辖的儿子以弗仑接洽
+% to sell me the cave of Machpelah that belongs to him; it is at the end of his field. Let him sell it to me in your presence for full price, so that I may have a burial site.”
+\N 将属于他的麦比拉洞穴卖给我；它在他田地的尽头。让他将其当着你们的面以足价卖给我，以使我能有一个埋葬地点。”
+
+% Now Ephron was sitting among the sons of Heth. So in the presence of all the Hittites who had come to the gate of his city, Ephron the Hittite answered Abraham,
+\N 现在以弗仑正坐在赫的子嗣中间。所以当着所有已到他城门的赫人的面，赫人以弗仑回答亚伯拉罕，
+% “No, my lord. Listen to me. I give you the field, and I give you the cave that is in it. I give it to you in the presence of my people. Bury your dead.”
+\N “不，我主。请听我说。我将这田地给你，并且我会将在其中的洞穴给你。我当着我族民的面将它给你。请埋葬你的死人。”
+
+% Again Abraham bowed down before the people of the land
+\N 亚伯拉罕再次在这土地的族民面前下拜
+% and said to Ephron in their presence, “If you will please listen to me, I will pay you the price of the field. Accept it from me, so that I may bury my dead there.”
+\N 并当着他们的面对以弗仑说，“如果你愿意听我说，我会支付给你那田地的价钱。从我这接受它，以使我能在那里埋葬我的死人。”
 
 \thispagestyle{empty}
 \newpage
