--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1984,6 +1984,23 @@
 % and said to Ephron in their presence, “If you will please listen to me, I will pay you the price of the field. Accept it from me, so that I may bury my dead there.”
 \N 并当着他们的面对以弗仑说，“如果你愿意听我说，我会支付给你那田地的价钱。从我这接受它，以使我能在那里埋葬我的死人。”
 
+% Ephron answered Abraham,
+\N 以弗仑回答亚伯拉罕，
+% “Listen to me, my lord. The land is worth four hundred shekels of silver, but what is that between you and me? Bury your dead.”
+\N “听我说，我主。这土地值四百舍客勒银子，但那在你和我之间是什么呢？请埋葬你的死人。”
+
+% Abraham agreed to Ephron’s terms and weighed out for him the price he had named in the hearing of the Hittites: four hundred shekels of silver, according to the standard of the merchants.
+\N 亚伯拉罕同意了以弗仑的款项并为他称出他已在赫人耳中报出的价钱：四百舍客勒银子，按照商人的标准。
+
+% So Ephron’s field at Machpelah near Mamre, the cave that was in it, and all the trees within the boundaries of the field were deeded over
+\N 所以以弗仑在幔利附近的麦比拉的田地，在其中的洞穴，以及田地边界内的所有树木都被转让成了
+% to Abraham’s possession in the presence of all the Hittites who had come to the gate of his city.
+\N 亚伯拉罕的财产，当着所有已到他城门的赫人的面。
+% After this, Abraham buried his wife Sarah in the cave of the field at Machpelah near Mamre (that is, Hebron) in the land of Canaan.
+\N 此后，亚伯拉罕在迦南之地，将他的妻子撒拉埋葬在幔利（那就是希伯仑）附近的麦比拉的田地的洞穴中。
+% So the field and its cave were deeded by the Hittites to Abraham as a burial site.
+\N 所以那田地和其洞穴，作为一个埋葬地点，被赫人转让给了亚伯拉罕。
+
 \thispagestyle{empty}
 \newpage
 
