--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1075,7 +1075,7 @@
 \subsection*{亚伯兰的召唤}
 
 % Then the LORD said to Abram, “Leave your country, your kindred, and your father’s household, and go to the land I will show you.
-\N 然后耶和华对亚伯兰说，“离开你的家乡、你的亲属及你父亲的家室，而去到我会展示给你的领地。
+\N 然后耶和华对亚伯兰说，“离开你的故乡、你的亲属及你父亲的家室，而去到我会展示给你的领地。
 
 % I will make you into a great nation, and I will bless you; I will make your name great, so that you will be a blessing.
 \N 我会使你成为一个大族，而我会祝福你；
@@ -2000,6 +2000,53 @@
 \N 此后，亚伯拉罕在迦南之地，将他的妻子撒拉埋葬在幔利（那就是希伯仑）附近的麦比拉的田地的洞穴中。
 % So the field and its cave were deeded by the Hittites to Abraham as a burial site.
 \N 所以那田地和其洞穴，作为一个埋葬地点，被赫人转让给了亚伯拉罕。
+
+% Genesis 24
+\section{第二十四章}
+
+% A Wife for Isaac
+\subsection*{以撒娶妻}
+
+% By now Abraham was old and well along in years, and the LORD had blessed him in every way.
+\N 到现在亚伯拉罕年老且年事已高，而耶和华已在每个方面都祝福他。
+% So Abraham instructed the chief servant of his household, who managed all he owned, “Place your hand under my thigh,
+\N 所以亚伯拉罕指示他家室管理他拥有的所有的首仆，“将你的手放在我的大腿下，
+% and I will have you swear by the LORD, the God of heaven and the God of earth, that you will not take a wife for my son from the daughters of the Canaanites among whom I am dwelling,
+\N 而我会使你靠耶和华、天之上帝和大之上帝发誓，你不会为我的儿子从我栖居的迦南人的女儿中间娶一位妻子，
+% but will go to my country and my kindred to take a wife for my son Isaac.”
+\N 而会去我的故乡和我的亲属那为我的儿子以撒娶一位妻子。”
+
+% The servant asked him, “What if the woman is unwilling to follow me to this land? Shall I then take your son back to the land from which you came?”
+\N 那仆人问他：“倘若那女人不愿意跟随我到这土地呢？那么我应该将你的儿子带回到你出身之地吗？”
+
+% Abraham replied, “Make sure that you do not take my son back there. 
+\N 亚伯拉罕回复，“做出保证你不将我的儿子带回那里。
+% The LORD, the God of heaven, who brought me from my father’s house and my native land, who spoke to me and promised me on oath, saying, ‘To your offspring I will give this land’—He will send His angel before you so that you can take a wife for my son from there.
+\N 耶和华，天之上帝，祂将我从我父亲的家族和我的故土带出，祂对我讲话并以誓言应许我，说，‘我会将这土地赐给你的后嗣’---祂会在你前面派祂的使者以使你能从那里为我的儿子娶一个妻子。
+% And if the woman is unwilling to follow you, then you are released from this oath of mine. Only do not take my son back there.”
+\N 而如果那女人不愿意跟随你，那么你就被免除我这个誓言。只是不要将你儿子带回那里。”
+
+% So the servant placed his hand under the thigh of his master Abraham and swore an oath to him concerning this matter.
+\N 所以仆人将他的手放在他的主人亚伯拉罕的大腿下，并向他就此事要发了誓言。
+
+% Then the servant took ten of his master’s camels and departed with all manner of good things from his master in hand. And he set out for Nahor’s hometown in Aram-naharaim.
+\N 然后那仆人带了他主人的十只骆驼，手里带着他主人各样美物离去。而他向拿鹤在亚兰拿哈林
+    \footnote {
+		\textit{亚兰拿哈林}意思是\textit{两河的亚兰}，即米所波大米（美索不达米亚），很可能是位于美索不达米亚西北部幼发拉底河和巴利赫河之间的地区。
+	}
+    的家乡出发。
+% As evening approached, he made the camels kneel down near the well outside the town at the time when the women went out to draw water.
+\N 当夜晚临近，他使骆驼在镇外水井附近跪下，那时女人们正外出汲水。
+% “O LORD, God of my master Abraham,” he prayed, “please grant me success today, and show kindness to my master Abraham.
+\N “耶和华啊，我主人亚伯拉罕的上帝，”他祷告，“今天请准予我成功，并将良善展示给我的主人亚伯拉罕。
+% Here I am, standing beside the spring, and the daughters of the townspeople are coming out to draw water.
+\N 我在这里，站在泉水旁，而镇民的女儿们正过来汲水。
+% Now may it happen that the girl to whom I say, ‘Please let down your jar that I may drink,’ and who responds, ‘Drink, and I will water your camels as well’—let her be the one You have appointed for Your servant Isaac. By this I will know that You have shown kindness to my master.”
+\N 现在愿这样的事发生：我对那个女孩说，‘请放下你的水罐使我能饮，’而她回应，‘喝吧，我还会饮你的骆驼’---让她成为祢为祢的仆人以撒已指定的那位。由此我会知道祢已将良善展示给我的主人。”
+
+
+
+
 
 \thispagestyle{empty}
 \newpage
