--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2012,7 +2012,7 @@
 % So Abraham instructed the chief servant of his household, who managed all he owned, “Place your hand under my thigh,
 \N 所以亚伯拉罕指示他家室管理他拥有的所有的首仆，“将你的手放在我的大腿下，
 % and I will have you swear by the LORD, the God of heaven and the God of earth, that you will not take a wife for my son from the daughters of the Canaanites among whom I am dwelling,
-\N 而我会使你靠耶和华、天之上帝和大之上帝发誓，你不会为我的儿子从我栖居的迦南人的女儿中间娶一位妻子，
+\N 而我会使你靠耶和华、天之上帝和地之上帝发誓，你不会为我的儿子从我栖居的迦南人的女儿中间娶一位妻子，
 % but will go to my country and my kindred to take a wife for my son Isaac.”
 \N 而会去我的故乡和我的亲属那为我的儿子以撒娶一位妻子。”
 
