--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1613,7 +1613,7 @@
 % Before they had gone to bed, all the men of the city of Sodom, both young and old, surrounded the house.
 \N 在他们已上床休息前，索多玛城的所有人，年轻的兼年老的，包围了那房子。
 % They called out to Lot, saying, “Where are the men who came to you tonight? Send them out to us so we can have relations with them!”
-\N 他们对罗得高呼，说，“今晚到你这里人在哪里？将他们送出给我们，这样我们就能与他们亲热！”
+\N 他们对罗得高呼，说，“今晚到你这里人在哪里？将他们送出给我们，这样我们就能与他们同房！”
 
 % Lot went outside to meet them, shutting the door behind him.
 \N 罗得走到外面与他们会见，关上他身后的门。
@@ -2043,6 +2043,55 @@
 \N 我在这里，站在泉水旁，而镇民的女儿们正过来汲水。
 % Now may it happen that the girl to whom I say, ‘Please let down your jar that I may drink,’ and who responds, ‘Drink, and I will water your camels as well’—let her be the one You have appointed for Your servant Isaac. By this I will know that You have shown kindness to my master.”
 \N 现在愿这样的事发生：我对那个女孩说，‘请放下你的水罐使我能饮，’而她回应，‘喝吧，我还会饮你的骆驼’---让她成为祢为祢的仆人以撒已指定的那位。由此我会知道祢已将良善展示给我的主人。”
+
+% Rebekah Is Chosen
+\subsection*{利百加被选}
+
+% Before the servant had finished praying, Rebekah came out with her jar on her shoulder. She was the daughter of Bethuel son of Milcah, the wife of Abraham’s brother Nahor.
+\N 在那仆人还未结束祷告之前，利百加就在她肩上带着她的水罐出来了。她是密迦、亚伯拉罕兄弟拿鹤的妻子的儿子彼土利的女儿。
+% Now the girl was very beautiful, a virgin who had not had relations with any man. She went down to the spring, filled her jar, and came up again.
+\N 现在那女孩非常漂亮，是一个未曾与任何男人同房的童女。她下到泉水那里，灌满她的水罐，又再次上来。
+
+% So the servant ran to meet her and said, “Please let me have a little water from your jar.”
+\N 所以那仆人跑去会见她并说，“请让我从你的水罐喝点水。”
+
+% “Drink, my lord,” she replied, and she quickly lowered her jar to her hands and gave him a drink.
+\N “喝吧，我主，”她回复，而她快速将她的水罐放到她手上，并给他喝。
+
+% After she had given him a drink, she said, “I will also draw water for your camels, until they have had enough to drink.”
+\N 在她给他喝完之后，她说，“我还会给你的骆驼汲水，直到它们喝足为止。”
+% And she quickly emptied her jar into the trough and ran back to the well to draw water, until she had drawn water for all his camels.
+\N 而她快速将她的水罐的水全倒进水槽中并跑回水井去汲水，直到她给他所有的骆驼都汲了水。
+
+% Meanwhile, the man watched her silently to see whether or not the LORD had made his journey a success.
+\N 同时，那人静静地察看她以看耶和华是否已使他此行成功。
+
+% And after the camels had finished drinking, he took out a gold ring weighing a beka, and two gold bracelets for her wrists weighing ten shekels.
+\N 而在骆驼喝完水之后，他拿出一个重一贝卡
+    \footnote {
+		\textit{一贝卡}是\textit{半舍客勒}，或大约0.2盎司或5.7克。
+	}
+    的金环，和两个戴在她手腕的重十舍客勒的金镯。
+% “Whose daughter are you?” he asked. “Please tell me, is there room in your father’s house for us to spend the night?”
+\N “你是谁的女儿？”他问。“请告诉我，在你父亲的住所有余地为我们过夜吗？”
+
+% She replied, “I am the daughter of Bethuel, the son that Milcah bore to Nahor.”
+\N 她回复，“我是彼土利、密迦为拿鹤生的儿子的女儿，”
+% Then she added, “We have plenty of straw and feed, as well as a place for you to spend the night.”
+\N 然后她补充说，“我们有充裕的麦秆和饲料，也有为你过夜的地方。”
+
+% Then the man bowed down and worshiped the LORD,
+\N 然后那人下拜并敬拜耶和华，
+% saying, “Blessed be the LORD, the God of my master Abraham, who has not withheld His kindness and faithfulness from my master. As for me, the LORD has led me on the journey to the house of my master’s relatives.”
+\N 说，“耶和华、我主人亚伯拉罕的上帝是当受崇拜的！祂未曾向我的主人扣留祂的良善和信实。至于我，耶和华已带领我在到我主人亲戚住所的途中。”
+
+% The girl ran and told her mother’s household about these things.
+\N 那女孩跑去把这些事情告诉了她母亲家室的人。
+% Now Rebekah had a brother named Laban, and he rushed out to the man at the spring.
+\N 现在，利百加有个哥哥名叫拉班，而他冲出去到在泉水边那人那里。
+% As soon as he saw the ring, and the bracelets on his sister’s wrists, and heard Rebekah’s words, “The man said this to me,” he went and found the man standing by the camels near the spring.
+\N 他一看见那金环，和他妹妹手腕上的镯子，并听见利百加的言词，“那人对我说了这话，”他就去找到了泉水边站在骆驼旁的那人。
+
 
 
 
