--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1144,7 +1144,7 @@
 % So Abram went up out of Egypt into the Negev—he and his wife and all his possessions—and Lot was with him.
 \N 所以亚伯兰向上走离开埃及进到尼革夫---他和他的妻子以及他所有的财产--罗得也与他一同。
 % And Abram had become extremely wealthy in livestock and silver and gold.
-\N 而亚伯兰在牲畜、白银和黄金上已变得极其富足。
+\N 而亚伯兰在牲畜、金银上已变得极其富足。
 
 % From the Negev he journeyed from place to place toward Bethel, until he came to the place between Bethel and Ai where his tent had formerly been pitched,
 \N 从尼革夫他向着伯特利从一处旅行到另一处，直到他来到伯特利和艾之间、他的帐篷从前搭起的地方，
@@ -2012,7 +2012,7 @@
 % So Abraham instructed the chief servant of his household, who managed all he owned, “Place your hand under my thigh,
 \N 所以亚伯拉罕指示他家室管理他拥有的所有的首仆，“将你的手放在我的大腿下，
 % and I will have you swear by the LORD, the God of heaven and the God of earth, that you will not take a wife for my son from the daughters of the Canaanites among whom I am dwelling,
-\N 而我会使你靠耶和华、天之上帝和地之上帝发誓，你不会为我的儿子从我栖居的迦南人的女儿中间娶一位妻子，
+\N 而我会使你靠耶和华、天之上帝和地之上帝发誓，你不会从我栖居的迦南人的女儿中间为我的儿子娶一位妻子，
 % but will go to my country and my kindred to take a wife for my son Isaac.”
 \N 而会去我的故乡和我的亲属那为我的儿子以撒娶一位妻子。”
 
@@ -2048,7 +2048,7 @@
 \subsection*{利百加被选}
 
 % Before the servant had finished praying, Rebekah came out with her jar on her shoulder. She was the daughter of Bethuel son of Milcah, the wife of Abraham’s brother Nahor.
-\N 在那仆人还未结束祷告之前，利百加就在她肩上带着她的水罐出来了。她是密迦、亚伯拉罕兄弟拿鹤的妻子的儿子彼土利的女儿。
+\N 在那仆人结束祷告之前，利百加就在她肩上带着她的水罐出来了。她是密迦、亚伯拉罕兄弟拿鹤的妻子的儿子彼土利的女儿。
 % Now the girl was very beautiful, a virgin who had not had relations with any man. She went down to the spring, filled her jar, and came up again.
 \N 现在那女孩非常漂亮，是一个未曾与任何男人同房的童女。她下到泉水那里，灌满她的水罐，又再次上来。
 
@@ -2090,8 +2090,67 @@
 % Now Rebekah had a brother named Laban, and he rushed out to the man at the spring.
 \N 现在，利百加有个哥哥名叫拉班，而他冲出去到在泉水边那人那里。
 % As soon as he saw the ring, and the bracelets on his sister’s wrists, and heard Rebekah’s words, “The man said this to me,” he went and found the man standing by the camels near the spring.
-\N 他一看见那金环，和他妹妹手腕上的镯子，并听见利百加的言词，“那人对我说了这话，”他就去找到了泉水边站在骆驼旁的那人。
+\N 他一看见那环，和他妹妹手腕上的镯子，并听见利百加的言词，“那人对我说了这话，”他就去找到了泉水边站在骆驼旁的那人。
 
+% “Come, you who are blessed by the LORD,” said Laban. “Why are you standing out here? I have prepared the house and a place for the camels.”
+\N “来，你这被耶和华祝福的人，”拉班说。“你为何站在外面这里？我已预备住所也为骆驼预备了地方。”
+% So the man came to the house, and the camels were unloaded. Straw and feed were brought to the camels, and water to wash his feet and the feet of his companions.
+\N 所以那人来到住所，并骆驼被卸下了。麦秆和饲料被送到骆驼那，水也被送来洗他和他同伴们的脚。
+
+% Then a meal was set before the man, but he said, “I will not eat until I have told you what I came to say.”
+\N 然后饭菜摆在那人面前，但他说，“在我告诉你们我来要说的事之前我不会吃。”
+
+% So Laban said, “Please speak.”
+所以拉班说，“请讲。”
+
+% “I am Abraham’s servant,” he replied.
+\N “我是亚伯拉罕的仆人，”他回复。
+% “The LORD has greatly blessed my master, and he has become rich. He has given him sheep and cattle, silver and gold, menservants and maidservants, camels and donkeys.
+\N “耶和华已大大祝福我的主人，而他已变得富有。祂已赐给他牛羊、金银、男仆和女仆、骆驼和驴。
+% My master’s wife Sarah has borne him a son in her old age, and my master has given him everything he owns.
+\N 我主人的妻子撒拉已在她老龄时为他生了一个儿子，而我的主人已将他拥有的一切都给了他。
+
+% My master made me swear an oath and said, ‘You shall not take a wife for my son from the daughters of the Canaanites in whose land I dwell,
+\N 我的主人让我发了誓言并说，‘你不要从我栖居之地迦南人的女儿为我的儿子娶一个妻子，
+% but you shall go to my father’s house and to my kindred to take a wife for my son.’
+\N 但你要去到我父亲的家族和到我亲属那为我的儿子娶一个妻子。’
+
+% Then I asked my master, ‘What if the woman will not come back with me?’
+\N 然后我问我的主人，‘倘若那女人不会与我回来呢？’
+
+% And he told me, ‘The LORD, before whom I have walked, will send His angel with you and make your journey a success, so that you may take a wife for my son from my kindred and from my father’s house. 
+\N 而他告诉我，‘耶和华，我已行在祂面前，祂会派祂的使者与你同在并使你此行成功，以使你能从我的亲属和我父亲的家族为我的儿子娶一个妻子。
+% And when you go to my kindred, if they refuse to give her to you, then you will be released from my oath.’
+\N 而当你去到我亲属那，如果他们拒绝将她给你，那么你会被免除我这个誓言。’
+
+% So when I came to the spring today, I prayed: O LORD, God of my master Abraham, if only You would make my journey a success!
+\N 所以当我今天来到泉水这，我祷告：耶和华啊，我主人亚伯拉罕的上帝，但愿祢会使我此行成功！
+% Here I am, standing beside this spring. Now if a maiden comes out to draw water and I say to her, ‘Please let me drink a little water from your jar,’
+\N 我在这里，站在这泉水旁。现在如果一位少女出来汲水而我对她说，‘请让我从你水罐喝点水，’
+% and she replies, ‘Drink, and I will draw water for your camels as well,’ may she be the woman the LORD has appointed for my master’s son.
+\N 而她回复，‘喝吧，而我还会给你的骆驼汲水，’愿她是那耶和华已为我主人的儿子指定的女人。
+
+% And before I had finished praying in my heart, there was Rebekah coming out with her jar on her shoulder, and she went down to the spring and drew water. So I said to her, ‘Please give me a drink.’
+\N 而在我结束我心中祷告之前，利百加就正从那出来，她肩上带着她的水罐，而她下到泉水那并汲水。所以我对她说，‘请给我水喝。’
+
+% She quickly lowered her jar from her shoulder and said, ‘Drink, and I will water your camels as well.’ So I drank, and she also watered the camels.
+\N 她快速从她肩上放下她的水罐并说，‘喝吧，而我还会饮你的骆驼。’所以我喝了，而她也饮了骆驼。
+
+% Then I asked her, ‘Whose daughter are you?’
+\N 然后我问她，‘你是谁的女儿？’
+
+% She replied, ‘The daughter of Bethuel son of Nahor, whom Milcah bore to him.’ So I put the ring on her nose and the bracelets on her wrists.
+她回复，‘拿鹤的儿子、密迦为他生的彼土利的女儿。’所以我将环放在她鼻子上并将镯子放在她手腕上。
+% Then I bowed down and worshiped the LORD; and I blessed the LORD, the God of my master Abraham, who led me on the right road to take the granddaughter of my master’s brother for his son.
+\N 然后我下拜并敬拜耶和华；而我崇拜耶和华、我主人亚伯拉罕的上帝，祂带领我在为他的儿子娶我主人兄弟的孙女的正路上。
+
+% Now if you will show kindness and faithfulness to my master, tell me; but if not, let me know, so that I may go elsewhere.”
+\N 现在如果你们愿向我主人展示良善和信实，请告诉我；但如果不，请让我知道，以使我能去其他地方。”
+
+% Laban and Bethuel answered, “This is from the LORD; we have no choice in the matter.
+\N 拉班和彼土利回答：“这来自耶和华；我们在这事上没有选择。
+% Rebekah is here before you. Take her and go, and let her become the wife of your master’s son, just as the LORD has decreed.”
+\N 利百加就在你面前。带她走，而让她成为你主人儿子的妻子，正如耶和华已降旨的。”
 
 
 
