--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2152,6 +2152,64 @@
 % Rebekah is here before you. Take her and go, and let her become the wife of your master’s son, just as the LORD has decreed.”
 \N 利百加就在你面前。带她走，而让她成为你主人儿子的妻子，正如耶和华已降旨的。”
 
+% When Abraham’s servant heard their words, he bowed down to the ground before the LORD.
+\N 当亚伯拉罕的仆人听见他们的言词，他在耶和华面前下拜在地。
+% Then he brought out jewels of silver and gold, and articles of clothing, and he gave them to Rebekah. He also gave precious gifts to her brother and her mother.
+\N 然后他拿出金银的珠宝，和衣物，而他将他们给了利百加。他还将珍贵的礼物给了她的哥哥和她的母亲。
+% Then he and the men with him ate and drank and spent the night there.
+\N 然后他和与他随行的人吃喝，并在那里过夜。
+
+% When they got up the next morning, he said, “Send me on my way to my master.”
+当他们第二天起身，他说，“送我上路回我主人那。”
+
+% But her brother and mother said, “Let the girl remain with us ten days or so. After that, she may go.”
+\N 但她哥哥和母亲说，“让这女孩留在我们身边十天左右。之后，她才能走。”
+
+% But he replied, “Do not delay me, since the LORD has made my journey a success. Send me on my way so that I may go to my master.”
+\N 但他回复，“不要耽搁我，因为耶和华已使我此行成功。送我上路以使我能去到我主人那。”
+
+% So they said, “We will call the girl and ask her opinion.”
+\N 所以他们说，“我们会叫来那女孩并问她的意见。”
+
+% They called Rebekah and asked her, “Will you go with this man?”
+\N 他们将利百加叫来并问她，“你愿意与这人一起走吗？”
+
+% “I will go,” she replied.
+“我愿意走，”她回复。
+
+% So they sent their sister Rebekah on her way, along with her nurse and Abraham’s servant and his men.
+\N 所以他们送他们的妹妹利百加上路，连同她的乳母和亚伯拉罕的仆人和他随行的人。
+% And they blessed Rebekah and said to her,
+\N 而他们祝福利百加并对她说，
+
+% “Our sister, may you become the mother of thousands upon thousands. May your offspring possess the gates of their enemies.”
+“我们的妹妹，愿你成为千千万万人的母亲。愿你的后嗣占有他们众敌的城门。”
+
+% Then Rebekah and her servant girls got ready, mounted the camels, and followed the man. So the servant took Rebekah and left.
+\N 然后利百加和她的婢女们做好了准备，骑上骆驼，并跟随那人。所以那仆人带着利百加就离开了。
+
+% Isaac Marries Rebekah
+\subsection*{以撒娶利百加}
+
+% Now Isaac had just returned from Beer-lahai-roi, for he was living in the Negev.
+\N 现在以撒刚从庇耳拉海莱返回，因为他一直生活在尼革夫。
+
+% Early in the evening, Isaac went out to the field to meditate, and looking up, he saw the camels approaching.
+\N 向晚时，以撒外出到田地冥思，并仰望，他看见骆驼从远处走来。
+
+% And when Rebekah looked up and saw Isaac, she got down from her camel
+\N 而当利百加仰望并看见以撒，她从骆驼上下来
+% and asked the servant, “Who is that man in the field coming to meet us?”
+\N 并问那仆人，“正在田地中过来会见我们的那人是谁？”
+
+% “It is my master,” the servant answered. So she took her veil and covered herself.
+\N “是我的主人，”仆人回答。所以她戴起她的面纱并将自己遮盖。
+% Then the servant told Isaac all that he had done.
+\N 然后仆人告诉了以撒他已完成的所有。
+
+% And Isaac brought her into the tent of his mother Sarah and took Rebekah as his wife. And Isaac loved her and was comforted after his mother’s death.
+\N 而以撒将她带进他母亲撒拉的帐篷并娶利百加为他的妻子。而以撒爱她并在他母亲死后得了安慰。
+
 
 
 
