--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2203,7 +2203,7 @@
 \N 并问那仆人，“正在田地中过来会见我们的那人是谁？”
 
 % “It is my master,” the servant answered. So she took her veil and covered herself.
-\N “是我的主人，”仆人回答。所以她戴起她的面纱并将自己遮盖。
+“是我的主人，”仆人回答。所以她戴起她的面纱并将自己遮盖。
 % Then the servant told Isaac all that he had done.
 \N 然后仆人告诉了以撒他已完成的所有。
 
