--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1318,7 +1318,7 @@
 % Then the LORD said to Abram, “Know for certain that your descendants will be strangers in a land that is not their own, and they will be enslaved and mistreated four hundred years.
 \N 然后耶和华对亚伯兰说，“要确定知道你的后代会在一个不是他们自身的土地上成为寄居者，而他们会被奴役并被虐待四百年。
 % But I will judge the nation they serve as slaves, and afterward they will depart with many possessions.
-\N 但我会审判他们作奴隶服侍的民族，而之后他们会带着许多财产离去。
+\N 但我会审判他们作奴隶服侍的族民，而之后他们会带着许多财产离去。
 % You, however, will go to your fathers in peace and be buried at a ripe old age.
 \N 然而，你会和平地去到你先祖那里并在高寿时被埋葬。
 % In the fourth generation your descendants will return here, for the iniquity of the Amorites is not yet complete.”
@@ -2210,8 +2210,46 @@
 % And Isaac brought her into the tent of his mother Sarah and took Rebekah as his wife. And Isaac loved her and was comforted after his mother’s death.
 \N 而以撒将她带进他母亲撒拉的帐篷并娶利百加为他的妻子。而以撒爱她并在他母亲死后得了安慰。
 
+% Genesis 25
+\section{第二十五章}
 
+% Abraham and Keturah
+\subsection*{亚伯拉罕与基土拉}
 
+% Now Abraham had taken another wife, named Keturah,
+\N 现在亚伯拉罕已娶另一个妻子，名叫基土拉，
+% and she bore him Zimran, Jokshan, Medan, Midian, Ishbak, and Shuah.
+\N 而她为他生了心兰、约珊、米但、米甸、伊施巴和书亚。
+
+% Jokshan was the father of Sheba and Dedan. And the sons of Dedan were the Asshurites, the Letushites, and the Leummites.
+\N 约珊是示巴和底但的父亲。而底但的子嗣是亚书利人、利都是人、和利乌米人。
+
+% The sons of Midian were Ephah, Epher, Hanoch, Abida, and Eldaah.
+\N 米甸的子嗣是以法、以弗、哈诺、亚比大和以勒大。
+
+% All these were descendants of Keturah.
+所有这些都是基土拉的后代。
+
+% Abraham left everything he owned to Isaac.
+\N 亚伯拉罕将他拥有的一切都留给了以撒。
+% But while he was still alive, Abraham gave gifts to the sons of his concubines and sent them away from his son Isaac to the land of the east.
+\N 但在他依然活着时，亚伯拉罕将礼物给他众妾的子嗣，并将他们送走离开他的儿子以撒，到东边之地去了。
+
+% The Death of Abraham
+\subsection*{亚伯拉罕之死}
+
+% Abraham lived a total of 175 years.
+\N 亚伯拉罕总共活了175年。
+% And at a ripe old age he breathed his last and died, old and contented, and was gathered to his people.
+\N 而在高寿时他吐了他最后一口气并死了，年老而意满，并被聚往他的民族。
+
+% His sons Isaac and Ishmael buried him in the cave of Machpelah near Mamre, in the field of Ephron son of Zohar the Hittite.
+\N 他的儿子以撒和以实玛利将他埋葬在幔利附近的麦比拉的洞穴中，在赫人琐辖的儿子以弗仑的田地中。
+% This was the field that Abraham had bought from the Hittites. Abraham was buried there with his wife Sarah.
+\N 这是亚伯拉罕已从赫人购买的田地。亚伯拉罕与他的妻子撒拉一同被埋葬在那里。
+
+% After Abraham’s death, God blessed his son Isaac, who lived near Beer-lahai-roi.
+\N 亚伯拉罕死后，上帝祝福他的儿子以撒，而他生活在庇耳拉海莱附近。
 
 
 \thispagestyle{empty}
