--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2251,6 +2251,42 @@
 % After Abraham’s death, God blessed his son Isaac, who lived near Beer-lahai-roi.
 \N 亚伯拉罕死后，上帝祝福他的儿子以撒，而他生活在庇耳拉海莱附近。
 
+% The Descendants of Ishmael
+\subsection*{以实玛利的后代}
+
+% This is the account of Abraham’s son Ishmael, whom Hagar the Egyptian, Sarah’s maidservant, bore to Abraham.
+\N 这是关于亚伯拉罕的儿子以实玛利的记述，他是埃及人夏甲、撒拉的女仆，为亚伯拉罕生的。
+% These are the names of the sons of Ishmael in the order of their birth: Nebaioth the firstborn of Ishmael, then Kedar, Adbeel, Mibsam, 
+\N 这些是以实玛利的子嗣的名字，按他们诞生的顺序：以实玛利的长子尼拜约，然后是基达、亚德别、米比衫、
+% Mishma, Dumah, Massa, 
+\N 米施玛、度玛、玛撒、
+% Hadad, Tema, Jetur, Naphish, and Kedemah.
+\N 哈大、提玛、伊突、拿非施、基底玛。
+
+% These were the sons of Ishmael, and these were their names by their villages and encampments—twelve princes of their tribes.
+\N 这些是以实玛利的子嗣，而且这些是他们按村落和营寨的名字---他们部落的十二位王子。
+% Ishmael lived a total of 137 years. Then he breathed his last and died, and was gathered to his people.
+\N 以实玛利总共活了137年。然后他吐了他最后一口气并死了，并被聚往他的民族。
+
+% Ishmael’s descendants settled from Havilah to Shur, which is near the border of Egypt as you go toward Asshur. And they lived in hostility toward all their brothers.
+\N 以实玛利的后代安家在哈腓拉直到书珥，那是当你向亚述去，靠近埃及边境的地方。而他们生活在对他们所有弟兄的敌意中。
+
+% Jacob and Esau
+\subsection*{雅各和以扫}
+
+% This is the account of Abraham’s son Isaac. Abraham became the father of Isaac,
+\N 这是关于亚伯拉罕的儿子以撒的记述。亚伯拉罕成为以撒的父亲，
+% and Isaac was forty years old when he married Rebekah, the daughter of Bethuel the Aramean from Paddan-aram and the sister of Laban the Aramean.
+\N 而当他娶了利百加、来自巴旦亚兰
+    \footnote {
+		也就是美索不达米亚西北部。
+	}
+    的亚兰人彼土利的女儿和亚兰人拉班的妹妹时，以撒四十岁。
+
+% Later, Isaac prayed to the LORD on behalf of his wife, because she was barren. And the LORD heard his prayer, and his wife Rebekah conceived.
+\N 后来，以撒为了他的妻子向耶和华祷告，因为她不育。而耶和华听见了他的祷告，他的妻子利百加就受孕了。
+
+
 
 \thispagestyle{empty}
 \newpage
