--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -410,7 +410,7 @@
 \N “并非如此！”耶和华回应。“如果任何人残杀该隐，那么该隐会得七重复仇。”而耶和华将一个标记放置在该隐上，使得找到他的无人会杀他。
 
 % So Cain went out from the presence of the LORD and settled in the land of Nod, east of Eden.
-\N 所以该隐从耶和华的临在走开，而在伊甸之东、挪得之地
+\N 所以该隐从耶和华的临在走出，而在伊甸之东、挪得之地
     \footnote {
 		\textit{挪得}意思是\textit{流浪}。
 	}
@@ -2285,6 +2285,50 @@
 
 % Later, Isaac prayed to the LORD on behalf of his wife, because she was barren. And the LORD heard his prayer, and his wife Rebekah conceived.
 \N 后来，以撒为了他的妻子向耶和华祷告，因为她不育。而耶和华听见了他的祷告，他的妻子利百加就受孕了。
+
+% But the children inside her struggled with each other, and she said, “Why is this happening to me?” So Rebekah went to inquire of the LORD, 
+\N 但孩子们在她内面相互扭打，而她说，“这为何对我发生？”所以利百加去询问耶和华，
+% and He declared to her:
+\N 而祂向她宣告：
+
+% “Two nations are in your womb, and two peoples from within you will be separated; one people will be stronger than the other, and the older will serve the younger.”
+“你子宫中有两邦，而从你里面出来的两族会被分开；一族会比另一族更强大，而年长的会服侍年幼的。”
+
+% When her time came to give birth, there were indeed twins in her womb.
+\N 当她到了分娩的时间，确实在她子宫中有双胞胎。
+% The first one came out red, covered with hair like a fur coat; so they named him Esau.
+\N 第一个出来是红色的，覆盖着像皮衣一样的毛发；所以他们给他取名以扫。
+% After this, his brother came out grasping Esau’s heel; so he was named Jacob. And Isaac was sixty years old when the twins were born.
+\N 之后，他的弟弟紧抓以扫的脚跟出来；所以他被取名雅各。而当双胞胎出生时，以撒六十岁。
+
+% When the boys grew up, Esau became a skillful hunter, a man of the field, while Jacob was a quiet man who stayed at home.
+\N 当俩男孩长大，以扫成为了一个娴熟的猎手，一个田野的人，而雅各是一个呆在家中安静的人。
+% Because Isaac had a taste for wild game, he loved Esau; but Rebekah loved Jacob.
+\N 因为以撒爱尝野味，他爱以扫；但利百加爱雅各。
+
+% Esau Sells His Birthright
+\subsection*{以扫出卖他的长子权}
+
+% One day, while Jacob was cooking some stew, Esau came in from the field and was famished.
+\N 一天，雅各正在炖一些汤时，以扫从田野，而他饿极了。
+% He said to Jacob, “Let me eat some of that red stew, for I am famished.” (That is why he was also called Edom.)
+\N 他对雅各说，“让我吃一些那个红汤，因为我饿极了。”（这是为何他也被称为以东。）
+
+% “First sell me your birthright,” Jacob replied.
+\N “先将你的长子权卖给我，”雅各回复。
+
+% “Look,” said Esau, “I am about to die, so what good is a birthright to me?”
+\N “看，”以扫说，“我快要死了，所以长子权对我有何好处呢？”
+
+% “Swear to me first,” Jacob said.
+\N “先向我发誓，”雅各说。
+
+% So Esau swore to Jacob and sold him the birthright.
+所以以扫向雅各发誓并将长子权卖给了他。
+% Then Jacob gave some bread and lentil stew to Esau, who ate and drank and then got up and went away. Thus Esau despised his birthright.
+\N 然后雅各将一些饼和扁豆汤给以扫，他吃了喝了，然后就起身走开了。因此以扫轻看了他的长子权。
+
+
 
 
 
